--- a/css/Mixtape_Studio_Gist.css
+++ b/css/Mixtape_Studio_Gist.css
@@ -30,7 +30,7 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/353cf5");
+@import url("https://cdn.rawgit.com/livh008/custom-player-vo-demo/tree/master/webfonts");
 
   
 @font-face {font-family: 'GistExtrabold';src: url('webfonts/353CF5_0_0.eot');src: url('webfonts/353CF5_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/353CF5_0_0.woff2') format('woff2'),url('webfonts/353CF5_0_0.woff') format('woff'),url('webfonts/353CF5_0_0.ttf') format('truetype'),url('webfonts/353CF5_0_0.svg#wf') format('svg');}
